--- a/styles/style.css
+++ b/styles/style.css
@@ -78,14 +78,14 @@ body{
 #about .container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     /* flex-wrap: wrap; */
     padding: 3% 5% 2% 5%;
     color: white;
 }
 #about .container .a1 {
     /* padding-top: 5%; */
-    width: 50%;
+    width: 30%;
 }
 
 #about .container .a1 h3 {
@@ -115,8 +115,8 @@ body{
     /* border-radius: 5px; */
 }
 #about .container .a2 {
-    width: 30%;
-    margin-right: 15%;
+    width: 35%;
+    /* margin-right: 15%; */
 }
 #about .container .a2 img {
     position: absolute;
@@ -134,6 +134,9 @@ body{
 }
 #about .container .a3 {
     width: 30%;
+    /* margin-top: 0%;
+    padding-top: 0%; */
+    padding-right: 5%;
     line-height: 25px;
     color: #d1cccc;
 }
@@ -196,7 +199,7 @@ body{
 .main .footer .f1 h4 {
     font-weight: bolder;
     padding-bottom: 40px;
-    font-size: larger;
+    font-size: xx-large;
     /* color: rgb(192, 191, 191); */
 }
 
@@ -219,9 +222,12 @@ body{
     width: 50%;
     /* padding: 10px 30px 10px 30px; */
     color: rgb(252, 186, 27);
-    font-size: large;
+    font-size: x-large;
     font-weight: bolder;
     /* color: aqua; */
+}
+.main .footer .f1 span p {
+    font-size: medium;
 }
 
 .main .footer .f2 {
@@ -254,7 +260,7 @@ body{
 }
 .main .footer .f2 .childF2 p span {
     font-size: smaller;
-    color: #d1cccc;
+    color: #6f6e6e;
 }
 
 .main .footer .f2 .childF2 p i {
